# packages/backend/src/domains/preguntasDomain/application/dtos/listaPreguntasPobladas.dto.ts
@@ -1,0 +1,7 @@
+import { IPreguntaPobladaDto } from "./preguntaPoblada.dto";
+
+export interface IListaPreguntasPobladasDto {
+	idCategoriaPrincipal: string;
+	nombreCategoriaPrincipal: string;
+	listaPreguntas: IPreguntaPobladaDto[]
+}
